Small bugfix where large images break the column widths

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -257,6 +257,7 @@ input[name="myImage"] {
 
 .center-column {
   flex: 10 1 auto;
+  max-width: 888px;
 }
 
 .right-column {
